# gargoyle

./: .gitignore  HISTORY.rst  README.rst  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py
gargoyle/: __init__.py  admin.py  apps.py  builtins.py  checks.py  conditions.py  constants.py  decorators.py  helpers.py  manager.py  models.py  nexus_modules.py  proxy.py  signals.py  testutils.py
gargoyle/management/commands/: add_switch.py  remove_switch.py
gargoyle/templatetags/: gargoyle_helpers.py  gargoyle_tags.py
tests/: urls.py
tests/settings/: base.py
tests/testapp/: test_api.py  test_builtins.py  test_models.py
