[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
ignore = E203, E266, E501, W503, C812, F811, W504

[isort]
profile = black
known_first_party = gargoyle,testapp
known_third_party = django,modeldict,nexus,pytz
line_length = 120
multi_line_output = 5

[metadata]
license_file = LICENSE

[tool:multilint]
paths = gargoyle
        runtests.py
        setup.py
        tests
